<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">

    <!-- keys for settings NO TRANSLATION -->
    <string name="evSequence"><xliff:g id="preference_key">evSequence</xliff:g></string>
    <string name="flashMode"><xliff:g id="preference_key">flashMode</xliff:g></string>
    <string name="shutterDelayTime"><xliff:g id="preference_key">shutterDelayTime</xliff:g></string>
    <string name="shutterSoundDisabled"><xliff:g id="preference_key">shutterSoundDisabled</xliff:g></string>
    <string name="geotagging"><xliff:g id="preference_key">geotagging</xliff:g></string>
    <string name="grid"><xliff:g id="preference_key">grid</xliff:g></string>
    <string name="processHdr"><xliff:g id="preference_key">processHdr</xliff:g></string>
    <string name="notifyHdr"><xliff:g id="preference_key">notifyHdr</xliff:g></string>
    <string name="trace"><xliff:g id="preference_key">trace</xliff:g></string>
    <string name="level"><xliff:g id="preference_key">level</xliff:g></string>
    <string name="use_api1"><xliff:g id="preference_key">use_api</xliff:g></string>
    <!-- keys for settings -->

    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="ok">OK</string>

    <string name="app_name">Multishot Camera</string>
    <string name="open_cv_present">OpenCV Package is present.</string>
    <string name="action_settings">Settings</string>
    <string name="take_photo">Take!</string>
    <string name="camera">Camera</string>
    <string name="shutter">Shutter</string>
    <string name="no_cam">No camera on this device.</string>
    <string name="no_back_cam">No back facing camera found.</string>
    <string name="no_directory">No directory to save image.</string>
    <string name="no_gallery_app">No gallery app available</string>
    <string name="save_error">"Image could not be saved."</string>
    <string name="photos_saved" formatted="false">%s photos saved to %s.</string>
    <string name="photo_progress">Taking photo please wait.</string>
    <string name="startup_text">This App requires OpenCvManager 3.0.0 to create a HDR photo. Shall I look for an installation now?</string>
    <string name="exposure">Exposure</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_merge_process">Image Merge Process</string>

    <string name="prefs_shutter_title">Shutter</string>
    <string name="prefs_shutter_delay_enabled_title">Shutter Delay</string>
    <string name="prefs_shutter_delay_enabled_description">Enable shutter delay.</string>
    <string name="prefs_shutter_delay_time_title">Delay Time</string>
    <string name="prefs_shutter_delay_time_description">Time for the shutter delay in seconds.</string>
    <string name="prefs_process_hdr_title">HDR Processing</string>
    <string name="prefs_process_hdr_enabled_title">Enable HDR processing</string>
    <string name="prefs_process_hdr_enabled_description">The app will try to create a HDR image.</string>
    <string name="prefs_broadcast_hdr_enabled_title">System message for HDR process</string>
    <string name="prefs_broadcast_hdr_enabled_description">The HDR service will send a general system notification when done.</string>
    <string name="prefs_shutter_sound_title">Shutter Sound</string>
    <string name="prefs_shutter_sound_disabled_description">When selected, there will be no sound when a photo is taken. It requires at least Android 4.2.</string>
    <string name="prefs_shutter_sound_disable_title">Disabled Shutter Sound</string>
    <string name="prefs_geo_tagging_enabled_description">When selected, and GPS is enabled, the current Location will be saved in the EXIF data of the pictures.</string>
    <string name="prefs_geo_tagging_enabled_title">Geotagging</string>
    <string name="prefs_grid_enabled_description">Show a 3x3 grid on the preview.</string>
    <string name="prefs_grid_enabled_title">Show Grid</string>
    <string name="prefs_level_enabled_description">Show a horizontal level on the preview.</string>
    <string name="prefs_level_enabled_title">Show Horizontal Level</string>
    <string name="prefs_debug_title">Debugging</string>
    <string name="prefs_trace_description">If enabled, a trace file for the photo shooting will be saved.</string>
    <string name="prefs_trace_title">Save Trace File</string>
    <string name="prefs_api1_description">If enabled, the device will use the old camera API.</string>
    <string name="prefs_api1_title">Use old API</string>
    <string name="prefs_picture_size_description">Set the size for the images.</string>
    <string name="prefs_picture_size_title">Picture Size</string>
    <string name="prefs_iso_description">Set the ISO value for the images.</string>
    <string name="prefs_iso_title">ISO</string>
    <string name="prefs_exposure_description">Set the sequence of exposure values.</string>
    <string name="prefs_exposure_title">Exposure Values</string>
    <string name="prefs_el_title">Exposure Values</string>
    <string name="prefs_flash_description">Set the type of flash light for the photo sequence.</string>
    <string name="prefs_flash_title">Flash Mode</string>
</resources>
