<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:key="shutterDelay"
        android:title="@string/prefs_shutter_title">
        <!--CheckBoxPreference
            android:key="shutterDelayEnabled"
            android:title="@string/prefs_shutter_delay_enabled_title"
            android:summary="@string/prefs_shutter_delay_enabled_description"
            android:defaultValue="false" /-->
        <ListPreference
            android:title="@string/prefs_shutter_delay_time_title"
            android:summary="@string/prefs_shutter_delay_time_description"
            android:key="shutterDelayTime"
            android:defaultValue="1"
            android:entries="@array/listArray"
            android:entryValues="@array/listValues"
            android:enabled="true"/>

    </PreferenceCategory>

</PreferenceScreen>
