<RelativeLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical"
	android:id="@+id/layout">

	<RelativeLayout
		android:id="@+id/preview"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_centerInParent="true"
		/>

	<ImageButton
			android:id="@+id/shutter"
			android:layout_width="82dp"
			android:layout_height="82dp"
			android:padding="5dp"
			android:scaleType="fitCenter"
			android:layout_alignParentBottom="true"
			android:layout_centerHorizontal="true"
			android:onClick="onShutter"
			android:src="@drawable/shutter"
			android:background="@null"
			android:text="@string/take_photo"
			android:contentDescription="@string/shutter"
			android:paddingBottom="5dp"
			android:focusableInTouchMode="false">
			<requestFocus/>
		</ImageButton>

		<ImageButton
			android:id="@+id/settings"
			android:layout_width="42dp"
			android:layout_height="42dp"
			android:padding="5dp"
			android:layout_alignParentRight="true"
			android:layout_alignParentBottom="true"
			android:onClick="onSettings"
			android:layout_alignBottom="@+id/preview"
			android:src="@drawable/settings"
			android:background="@null"
			android:text="@string/action_settings"
			android:contentDescription="@string/action_settings"
			android:focusableInTouchMode="false"
			android:layout_marginRight="1dp"
			android:layout_marginBottom="1dp">
		</ImageButton>

		<ProgressBar
			android:id="@+id/progress_bar"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_centerHorizontal="true"
			android:layout_alignTop="@+id/preview"
			android:indeterminate="true"
			android:visibility="gone"/>


</RelativeLayout>
